--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,20 @@
 @font-face {
     font-family: 'SANS';
     src: url('fonts/Comic Sans MS.woff2') format('woff2'),
-         url('fonts/Comic Sans MS.woff') format('woff');
+         url('fonts/Comic Sans MS.woff') format('woff'),
+         url('fonts/Comic Sans MS.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
 }
 
 body {
+    background-image: url('assets/images/LuigiGrid.png');
+    background-size: cover; /* This ensures the image covers the entire background */
+    background-repeat: no-repeat; /* This prevents the image from repeating */
+    background-position: center; /* This centers the background image */
+    
     font-family: 'SANS', sans-serif;
-    background-color: grey;
+    color: white;
     padding: 2%;
 }
 
